[gd_scene load_steps=8 format=3 uid="uid://cra43mxskucvv"]

[ext_resource type="Script" path="res://navigation/maps/map_01/map_01.gd" id="1_k7kwh"]
[ext_resource type="Script" path="res://navigation/maps/map_01/navmesh.gd" id="2_2glxt"]
[ext_resource type="PackedScene" uid="uid://bxdb0ix3c5ajr" path="res://objects/obstruction_object.tscn" id="4_0muv0"]
[ext_resource type="PackedScene" uid="uid://dfqaiavw35img" path="res://entities/pc/entity_pc.tscn" id="5_n3qaa"]
[ext_resource type="PackedScene" uid="uid://djytndftcavnt" path="res://api/game_api.tscn" id="6_kn8mf"]
[ext_resource type="Script" path="res://navigation/maps/map_01/OLD CODE.gd" id="7_a1x18"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_bhxb0"]
vertices = PackedVector2Array(896.416, -20.9652, 1141, -23, 1140, 188, 620.383, 623, 151.909, 623, -16, 623, -15.6989, 525.571, -14, 372, 346, 622, -14.4529, 122.528, -14, -24, 166.037, -23.3489, 1138.38, 539.708, 1138, 623, 539, -22, 569, 623, 396, -23)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7, 8), PackedInt32Array(9, 10, 11, 8, 7), PackedInt32Array(12, 13, 3), PackedInt32Array(2, 12, 3), PackedInt32Array(14, 0, 3, 15, 8), PackedInt32Array(16, 14, 8, 11)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-14, -24, 166.037, -23.3489, 396, -23, 539, -22, 896.416, -20.9652, 1141, -23, 1140, 188, 1138.38, 539.708, 1138, 623, 620.383, 623, 569, 623, 346, 622, 151.909, 623, -16, 623, -15.6989, 525.571, -14, 372, -14.4529, 122.528)])
cell_size = 24.0

[node name="Map_01" type="Node2D"]
script = ExtResource("1_k7kwh")

[node name="NavMesh" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(13, 24)
navigation_polygon = SubResource("NavigationPolygon_bhxb0")
use_edge_connections = false
enter_cost = 1.0
script = ExtResource("2_2glxt")

[node name="ObstructionObject" parent="NavMesh" instance=ExtResource("4_0muv0")]
position = Vector2(431, 153)
disable_mode = 2

[node name="ObstructionObject2" parent="NavMesh" instance=ExtResource("4_0muv0")]
position = Vector2(849, 151)
disable_mode = 2

[node name="EntityPc" parent="NavMesh" instance=ExtResource("5_n3qaa")]

[node name="NavMesh" type="NavigationRegion2D" parent="NavMesh"]
show_behind_parent = true
position = Vector2(13, 24)
navigation_polygon = SubResource("NavigationPolygon_bhxb0")
use_edge_connections = false
enter_cost = 1.0
script = ExtResource("2_2glxt")

[node name="ObstructionObject" parent="NavMesh/NavMesh" instance=ExtResource("4_0muv0")]
position = Vector2(431, 153)
disable_mode = 2

[node name="ObstructionObject2" parent="NavMesh/NavMesh" instance=ExtResource("4_0muv0")]
position = Vector2(849, 151)
disable_mode = 2

[node name="EntityPc" parent="NavMesh/NavMesh" instance=ExtResource("5_n3qaa")]

[node name="GameApi" parent="." instance=ExtResource("6_kn8mf")]

[node name="LogicTimer" type="Timer" parent="."]
autostart = true

[node name="OLD CODE" type="Node" parent="."]
script = ExtResource("7_a1x18")

[connection signal="mouse_click_movement" from="." to="NavMesh/EntityPc" method="_on_map_01_mouse_click_movement"]
[connection signal="child_entered_tree" from="NavMesh" to="." method="_on_nav_mesh_child_entered_tree"]
[connection signal="ready" from="NavMesh" to="." method="_on_nav_mesh_ready"]
[connection signal="child_entered_tree" from="NavMesh/NavMesh" to="." method="_on_nav_mesh_child_entered_tree"]
[connection signal="ready" from="NavMesh/NavMesh" to="." method="_on_nav_mesh_ready"]
[connection signal="ready" from="GameApi" to="." method="_on_game_api_ready"]
[connection signal="timeout" from="LogicTimer" to="GameApi" method="_on_logic_timer_timeout"]
